// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PremiumInput should render the PremiumInput view with 0 premium 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <TouchableOpacity
    accessibilityHint="decrease number"
    onPress={[Function]}
  >
    <Icon
      color="#F56522"
      id="minusCircle"
      size={24}
    />
  </TouchableOpacity>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "gap": 8,
        "justifyContent": "center",
      }
    }
  >
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
            "textAlign": "center",
          },
          {
            "color": "#2B1911",
          },
        ]
      }
    >
      premium
      :
    </PeachText>
    <PremiumTextInput
      premium={0}
      setPremium={[MockFunction]}
    />
  </View>
  <TouchableOpacity
    accessibilityHint="increase number"
    onPress={[Function]}
  >
    <Icon
      color="#F56522"
      id="plusCircle"
      size={24}
    />
  </TouchableOpacity>
</View>
`;

exports[`PremiumInput should render the PremiumInput view with discount 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <TouchableOpacity
    accessibilityHint="decrease number"
    onPress={[Function]}
  >
    <Icon
      color="#F56522"
      id="minusCircle"
      size={24}
    />
  </TouchableOpacity>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "gap": 8,
        "justifyContent": "center",
      }
    }
  >
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
            "textAlign": "center",
          },
          {
            "color": "#F56522",
          },
        ]
      }
    >
      discount
      :
    </PeachText>
    <PremiumTextInput
      premium={-3.2}
      setPremium={[MockFunction]}
    />
  </View>
  <TouchableOpacity
    accessibilityHint="increase number"
    onPress={[Function]}
  >
    <Icon
      color="#F56522"
      id="plusCircle"
      size={24}
    />
  </TouchableOpacity>
</View>
`;

exports[`PremiumInput should render the PremiumInput view with premium 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <TouchableOpacity
    accessibilityHint="decrease number"
    onPress={[Function]}
  >
    <Icon
      color="#F56522"
      id="minusCircle"
      size={24}
    />
  </TouchableOpacity>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "gap": 8,
        "justifyContent": "center",
      }
    }
  >
    <PeachText
      style={
        [
          {
            "fontFamily": "Baloo2-Regular",
            "fontSize": 20,
            "letterSpacing": 0.2,
            "lineHeight": 28,
            "textAlign": "center",
          },
          {
            "color": "#65A519",
          },
        ]
      }
    >
      premium
      :
    </PeachText>
    <PremiumTextInput
      premium={3.2}
      setPremium={[MockFunction]}
    />
  </View>
  <TouchableOpacity
    accessibilityHint="increase number"
    onPress={[Function]}
  >
    <Icon
      color="#F56522"
      id="plusCircle"
      size={24}
    />
  </TouchableOpacity>
</View>
`;
